Ajout arrière plan + première mise en forme du titre
- Ajout arrière plan
- Changement méthode de slideshow + positionné à gauche
- Brosse à dents modifiée

--- a/assets/style.css
+++ b/assets/style.css
@@ -88,99 +88,57 @@ nav li a {
 }
 
 
+/* Personnalisation de l'arrière plan */
+
+
+  body{
+    background-image: url(background.png);
+    background-repeat: no-repeat;
+  }
+
+
 /* Personnalisation de la partie "Accueil" */
 	/* Message de bienvenue */
+  .titreaccueil {
+    color: lightgray;
+    text-align: center;
+    font-size: 75px;
+    font-weight: bold;
+    font-family: Helvetica;
+    text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15);
+  }
 
-
+  .soustitreaccueil {
+    color: lightgray;
+    text-align: center;
+    font-size: 30px;
+    position: relative;
+    bottom: 30px;
+    font-weight: bold;
+    font-family: Helvetica;
+    text-shadow: 0 1px 0 #ccc, 0 1px 0 #c9c9c9, 0 1px 0 #bbb, 0 2px 0 #b9b9b9, 0 2px 0 #aaa, 0 3px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 8px 8px rgba(0,0,0,.2), 0 15px 15px rgba(0,0,0,.15);
+  }
 
 	/* Slideshow */	
 
-.css-slideshow{
-  position: relative;
-  max-width: 495px;
-  height: 370px;
-  margin: 5em auto .5em auto;
-}
-.css-slideshow figure{
-  margin: 0;
-  max-width: 495px;
-  height: 370px;
-  background: #000;
-  position: absolute;
-}
-.css-slideshow img{
-  box-shadow: 0 0 2px #666;
-}
-.css-slideshow figcaption{
-  position: absolute;
-  top: 0;
-  color: #fff;
-  background: rgba(0,0,0, .3);
-  font-size: .8em;
-  padding: 8px 12px;
-  opacity: 0;
-  transition: opacity .5s;
-}
-.css-slideshow:hover figure figcaption{
-  transition: opacity .5s;
-  opacity: 1;
-}
-.css-slideshow-attr{
-  max-width: 495px;
-  text-align: right;
-  font-size: .7em;
-  font-style: italic;
-  margin:0 auto;
-}
-.css-slideshow-attr a{
-  color: #666;
-}
-.css-slideshow figure{
-  opacity:0;
-}
-figure:nth-child(1) {
-  animation: xfade 48s 42s infinite;
-}
-figure:nth-child(2) {
-  animation: xfade 48s 36s infinite;
-}
-figure:nth-child(3) {
-  animation: xfade 48s 30s infinite;
-}
-figure:nth-child(4) {
-  animation: xfade 48s 24s infinite;
-}
-figure:nth-child(5) {
-  animation: xfade 48s 18s infinite;
-}
-figure:nth-child(6) {
-  animation: xfade 48s 12s infinite;
-}
-figure:nth-child(7) {
-  animation: xfade 48s 6s infinite;
-}
-figure:nth-child(8) {
-  animation: xfade 48s 0s infinite;
-}
+  .slideshow {
+    width:400px; 
+    height:400px; 
+    overflow:hidden; 
+    position:relative; 
+  }
+  .slideshow img{ 
+    position:absolute;
+    animation:slideshow 15s infinite; 
+    opacity:0; 
+    width: 100%; 
+    height: auto;
+  }
 
-@keyframes xfade{
-  0%{
-    opacity: 1;
-  }
-  10.5% {
-    opacity: 1;
-  }
-  12.5%{
-    opacity: 0;
-  }
-  98% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
+  @keyframes slideshow {25%{opacity:1;} 40%{opacity:0;}} 
+  .slideshow img:nth-child(3){animation-delay:0s;}
+  .slideshow img:nth-child(2){animation-delay:5s;}
+  .slideshow img:nth-child(1){animation-delay:10s;}
 /* Personnalisation de la partie "Recherche" */
 
 #recherche img {
